add styling, structure templates, add auth

--- a/invoice_books/templates/invoice_pdf/default.html
+++ b/invoice_books/templates/invoice_pdf/default.html
@@ -1,9 +1,9 @@
-{% extends 'invoice/base.html' %}
+{% extends 'invoice_pdf/base.html' %}
 
 {% load staticfiles %}
 
 {% block content %}
     <div class="container">
-        {% include 'invoice/includes/header.html' %}
+        {% include 'invoice_pdf/includes/header.html' %}
     </div>
 {% endblock %}
