--- a/invoice_books/templates/project/base.html
+++ b/invoice_books/templates/project/base.html
@@ -42,9 +42,9 @@
                                 <ul class="nav navbar-nav navbar-right">
                                     <li>
                                         {% if user.is_authenticated %}
-                                            <a href="{% url "logout" %}">Logout</a>
+                                            <a href="{% url "accounts:logout" %}">Logout</a>
                                         {% else %}
-                                            <a href="{% url "login" %}">Login</a>
+                                            <a href="{% url "accounts:login" %}">Login</a>
                                         {% endif %}
                                     </li>
                                 </ul>
