fix item update, add item create

--- a/invoice_books/templates/inventory/items_list.html
+++ b/invoice_books/templates/inventory/items_list.html
@@ -4,7 +4,8 @@
 
     <div class="panel panel-info">
         <div class="panel-heading">
-            Items
+            <span>Items</span>
+            <span class="pull-right"><a href="{% url 'inventories:item_create' %}">Create</a></span>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
