--- a/invoice_books/templates/inventory/item_create.html
+++ b/invoice_books/templates/inventory/item_create.html
@@ -1,4 +1,4 @@
-{% extends 'inventory/dashboard.html' %}
+{% extends 'project/dashboard.html' %}
 {% block main_content %}
 
     <div class="panel panel-primary">
@@ -6,18 +6,44 @@
             Create Item
         </div>
         <div class="panel-body">
+            <div class="form_errors">
+                <ul class="list-group">
+                    {% for error in form.non_field_errors %}
+                        <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                    {% endfor %}
+                </ul>
+            </div>
             <form class="form-horizontal" method="post">
                 {% csrf_token %}
+                <div class="form-group">
+                    <label for="id_sku" class="col-sm-2 control-label">{{ form.sku.label }}</label>
+
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" maxlength='20' id="id_sku" name="sku"
+                               {% if form.sku.value %}value="{{ form.sku.value }}"{% endif %}>
+                        {% for error in form.sku.errors %}
+                            <span class="help-block">{{ error|escape }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="id_name" class="col-sm-2 control-label">{{ form.name.label }}</label>
 
                     <div class="col-sm-8">
                         <input type="text" class="form-control" maxlength='20' id="id_name" name="name"
-                                {% if form.name.value %}
-                               value="{{ form.name.value }}"
-                                {% endif %}
-                                >
+                               {% if form.name.value %}value="{{ form.name.value }}"{% endif %}>
                         {% for error in form.name.errors %}
+                            <span class="help-block">{{ error|escape }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="id_hsn" class="col-sm-2 control-label">{{ form.hsn.label }}</label>
+
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" maxlength='20' id="id_hsn" name="hsn"
+                               {% if form.hsn.value %}value="{{ form.hsn.value }}"{% endif %}>
+                        {% for error in form.hsn.errors %}
                             <span class="help-block">{{ error|escape }}</span>
                         {% endfor %}
                     </div>
@@ -37,31 +63,20 @@
                     <label for="id_quantity" class="col-sm-2 control-label">{{ form.quantity.label }}</label>
 
                     <div class="col-sm-8">
-                        <input type="number" class="form-control" min='0' id="id_quantity" name="quantity"
-                               value="{{ form.quantity.value }}">
+                        <input type="number" class="form-control" min="0" id="id_quantity" name="quantity"
+                               {% if form.quantity.value %}value="{{ form.quantity.value }}"{% endif %}>
                         {% for error in form.quantity.errors %}
                             <span class="help-block">{{ error|escape }}</span>
                         {% endfor %}
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_is_returnable" class="col-sm-2 control-label">{{ form.is_returnable.label }}</label>
+                    <label for="id_tax_notes" class="col-sm-2 control-label">{{ form.tax_notes.label }}</label>
 
                     <div class="col-sm-8">
-                        <input type="checkbox" id="id_is_returnable" name="is_returnable"
-                               {% if form.is_returnable.value %}checked{% endif %}>
-                        {% for error in form.is_returnable.errors %}
-                            <span class="help-block">{{ error|escape }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_is_active" class="col-sm-2 control-label">{{ form.is_active.label }}</label>
-
-                    <div class="col-sm-8">
-                        <input type="checkbox" id="id_is_active" name="is_active"
-                               {% if form.is_active.value %}checked{% endif %}>
-                        {% for error in form.is_active.errors %}
+                    <textarea class="form-control" cols="40" id="id_tax_notes" name="tax_notes"
+                              rows="5">{% if form.tax_notes.value %}{{ form.tax_notes.value }}{% endif %}</textarea>
+                        {% for error in form.tax_notes.errors %}
                             <span class="help-block">{{ error|escape }}</span>
                         {% endfor %}
                     </div>
@@ -74,6 +89,6 @@
             </form>
         </div>
     </div>
-    <a href="{% url 'inventory:dashboard_admin' %}">Back</a>
+    <a href="{% url 'inventories:item_list' %}">Cancel</a>
 
 {% endblock %}
