add invoice list

--- a/invoice_books/templates/project/dashboard.html
+++ b/invoice_books/templates/project/dashboard.html
@@ -9,6 +9,9 @@
 <div class="navbar-header">
     <a class="navbar-brand" href={% url 'inventories:item_list' %}>Items</a>
 </div>
+<div class="navbar-header">
+    <a class="navbar-brand" href={% url 'invoices:invoice_list' %}>Invoices</a>
+</div>
 {% endblock %}
 
 {% block main_content %}
