--- a/invoice_books/templates/inventory/item_list.html
+++ b/invoice_books/templates/inventory/item_list.html
@@ -5,7 +5,7 @@
     <div class="panel panel-info">
         <div class="panel-heading">
             <span>Items</span>
-            <span class="pull-right"><a href="{% url 'inventories:item_create' %}">Create</a></span>
+            <a href="{% url 'inventories:item_create' %}"><span class="btn btn-primary pull-right">+ Add New Item</span></a>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -30,7 +30,7 @@
                             <td>{{ item.description|truncatechars:20 }}</td>
                             <td>{{ item.quantity }}</td>
                             <td>{{ item.created_at.date }}</td>
-                            <td><a href="{% url 'inventories:item_update' item.id %}">Update</a></td>
+                            <td><a href="{% url 'inventories:item_update' item.id %}"><span class="btn btn-default">Update</span></a></td>
                         </tr>
                     {% empty %}
                         No items to update.
