--- a/invoice_books/templates/invoice_pdf/base.html
+++ b/invoice_books/templates/invoice_pdf/base.html
@@ -1,23 +1,6 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html class="default">
-<head>
+{% extends 'project/base.html' %}
 
-    {% block styles %}
-        <link href="{% static 'scss/style.scss' %}" type="text/x-scss" rel="stylesheet" />
-    {% endblock %}
-
-</head>
-
-<body>
-{% block body %}
-
-<div id="page-wrap" class="global-wrap">
-    <div class="main-content">
-        {% block content %}{% endblock %}
-    </div>
-</div>
-
+{% block header %}
 {% endblock %}
-</body>
-</html>
+{% block body_content %}
+{% endblock %}
