--- a/invoice_books/templates/invoice_pdf/default.html
+++ b/invoice_books/templates/invoice_pdf/default.html
@@ -1,9 +1,17 @@
 {% extends 'invoice_pdf/base.html' %}
 
-{% load staticfiles %}
-
-{% block content %}
+{% block body_content %}
     <div class="container">
         {% include 'invoice_pdf/includes/header.html' %}
+        <div class="row">
+            <div class="col-md-8">
+            </div>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-8">
+                <h2>Invoice</h2>
+            </div>
+        </div>
+        {% include 'invoice_pdf/includes/info.html' %}
     </div>
 {% endblock %}
