--- a/invoice_books/templates/invoice_pdf/includes/header.html
+++ b/invoice_books/templates/invoice_pdf/includes/header.html
@@ -1,15 +1,40 @@
+{% extends 'invoice_pdf/base.html' %}
 {% load staticfiles %}
-<div class="profile-tables-wrap">
-    <ul class="bw-table-wrap">
-        <li>
-            <span class="type-left"><span class="img-gap"><img src="{{ logo_1 }}"></span></span>
-            <ul>
-                <li><span class="type-left">{{ company.name }}</span></li>
-                <li><span class="type-left">{{ company.address_line_1 }}</span></li>
-                <li><span class="type-left">{{ company.address_line_2 }}</span></li>
-                <li><span class="type-left">GSTIN: {{ company.gstin }}</span></li>
-            </ul>
-            <span class="type-left"><span class="img-gap"><img src="{{ logo_2 }}"></span></span>
-        </li>
-    </ul>
-</div>
+
+{% block body_content %}
+    <div class="container ">
+        <div class="row text-center">
+            <div class="col-md-2">
+                <img src="{% static company.logo_1 %}" class="img-responsive">
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ company.name }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ company.address_line_1 }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        {{ company.address_line_2 }}
+                    </div>
+                    <div class="col-md-2">
+                        {{ company.phone }}
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ company.gstin }}
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <img src="{% static company.logo_2 %}" class="img-responsive">
+            </div>
+        </div>
+    </div>
+{% endblock %}
