--- a/invoice_books/templates/account/login.html
+++ b/invoice_books/templates/account/login.html
@@ -7,7 +7,7 @@
         </legend>
         <form class="form-horizontal" method="post">
             {% csrf_token %}
-            <input type="hidden" name="next" value={% firstof next '/dashboard/user' %}>
+            <input type="hidden" name="next" value={% firstof next '/dashboard/' %}>
             {% for error in form.non_field_errors %}
                 <span class="help-block"><strong>{{ error|escape }}</strong></span>
             {% endfor %}
