--- a/invoice_books/templates/invoice/invoice_list.html
+++ b/invoice_books/templates/invoice/invoice_list.html
@@ -32,7 +32,7 @@
                             <td><a href="{% url 'invoices:invoice_detail' invoice.id %}"><span class="btn btn-default">Detail</span></a></td>
                         </tr>
                     {% empty %}
-                        No items to update.
+                        No invoices.
                     {% endfor %}
                     </tbody>
                 </table>
