--- a/invoice_books/templates/inventory/item_create.html
+++ b/invoice_books/templates/inventory/item_create.html
@@ -93,7 +93,7 @@
 
                     <div class="col-sm-8">
                     <select class="form-control" id="id_tax_1" name="tax_1">
-                        {% for key, value in form.tax_1.choices %}
+                        {% for key, value in form.tax_1.field.choices %}
                             <option value="{{ key }}" {% if form.tax_1.value == key %}selected{% endif %}>{{ value }}</option>
                         {% endfor %}
                     </select>
@@ -108,7 +108,7 @@
 
                     <div class="col-sm-8">
                     <select class="form-control" id="id_tax_2" name="tax_2">
-                        {% for key, value in form.tax_2.choices %}
+                        {% for key, value in form.tax_2.field.choices %}
                             <option value="{{ key }}" {% if form.tax_2.value == key %}selected{% endif %}>{{ value }}</option>
                         {% endfor %}
                     </select>
