--- a/invoice_books/templates/invoice_pdf/default.html
+++ b/invoice_books/templates/invoice_pdf/default.html
@@ -2,16 +2,7 @@
 
 {% block body_content %}
     <div class="container">
-        {% include 'invoice_pdf/includes/header.html' %}
-        <div class="row">
-            <div class="col-md-8">
-            </div>
-        </div>
-        <div class="row text-center">
-            <div class="col-md-8">
-                <h2>Invoice</h2>
-            </div>
-        </div>
+{#        {% include 'invoice_pdf/includes/header.html' %}#}
         {% include 'invoice_pdf/includes/info.html' %}
     </div>
 {% endblock %}
