--- a/invoice_books/templates/project/dashboard.html
+++ b/invoice_books/templates/project/dashboard.html
@@ -14,6 +14,9 @@
         <a href={% url 'invoices:invoice_list' %}>Invoices</a>
     </li>
     <li>
+        <a href={% url 'taxes:tax_list' %}>Taxes</a>
+    </li>
+    <li>
         <a href=""><span class="btn btn-success navbar-btn navbar_short_btn">+ New Invoice</span></a>
     </li>
 </ul>
