--- a/invoice_books/assets/css/styles.css
+++ b/invoice_books/assets/css/styles.css
@@ -110,3 +110,45 @@ body .modal-admin {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+.bordered {
+    border: solid 4px grey;
+    border-top: 0;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    vertical-align: text-top;
+}
+
+.left-bordered {
+    border-left: solid 2px grey;
+    vertical-align: text-top;
+}
+
+.top-bordered {
+    border-top: solid 2px grey;
+    vertical-align: text-top;
+}
+
+.type-center {
+    text-align: center;
+}
+
+.type-left {
+    width: 83px;
+    text-align: left;
+}
+
+.half-block {
+    height: 100%;
+    width: 49%;
+    display: inline-block;
+}
+
+.one-third-block {
+    width: 31%;
+    display: inline-block;
+}
+
+.non-empty {
+    min-height: 15px;
+}
