--- a/invoice_books/templates/invoice/invoice_create.html
+++ b/invoice_books/templates/invoice/invoice_create.html
@@ -16,67 +16,29 @@
             <form class="form-horizontal" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="id_sku" class="col-sm-2 control-label">{{ form.sku.label }}</label>
+                    <label for="id_customer" class="col-sm-2 control-label">{{ form.customer.label }}</label>
 
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" maxlength='20' id="id_sku" name="sku"
-                               {% if form.sku.value %}value="{{ form.sku.value }}"{% endif %}>
-                        {% for error in form.sku.errors %}
+                    <select class="form-control" id="id_customer" name="customer">
+                        {% for key, value in form.customer.field.choices %}
+                            1, {{ form.customer.value }}, {{ key }}
+                            <option value="{{ key }}" {% if form.customer.value == key %}selected{% endif %}>{{ value }}</option>
+                        {% endfor %}
+                    </select>
+                    <p id="customerHelpBlock" class="form-text text-muted">{{ form.customer.help_text }}</p>
+                        {% for error in form.customer.errors %}
                             <span class="help-block">{{ error|escape }}</span>
                         {% endfor %}
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="id_name" class="col-sm-2 control-label">{{ form.name.label }}</label>
+                    <label for="id_date" class="col-sm-2 control-label">{{ form.date.label }}</label>
 
                     <div class="col-sm-8">
-                        <input type="text" class="form-control" maxlength='20' id="id_name" name="name"
-                               {% if form.name.value %}value="{{ form.name.value }}"{% endif %}>
-                        {% for error in form.name.errors %}
-                            <span class="help-block">{{ error|escape }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_hsn" class="col-sm-2 control-label">{{ form.hsn.label }}</label>
-
-                    <div class="col-sm-8">
-                        <input type="text" class="form-control" maxlength='20' id="id_hsn" name="hsn"
-                               {% if form.hsn.value %}value="{{ form.hsn.value }}"{% endif %}>
-                        {% for error in form.hsn.errors %}
-                            <span class="help-block">{{ error|escape }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_description" class="col-sm-2 control-label">{{ form.description.label }}</label>
-
-                    <div class="col-sm-8">
-                    <textarea class="form-control" cols="40" id="id_description" name="description"
-                              rows="5">{% if form.description.value %}{{ form.description.value }}{% endif %}</textarea>
-                        {% for error in form.description.errors %}
-                            <span class="help-block">{{ error|escape }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_quantity" class="col-sm-2 control-label">{{ form.quantity.label }}</label>
-
-                    <div class="col-sm-8">
-                        <input type="number" class="form-control" min="0" id="id_quantity" name="quantity"
-                               {% if form.quantity.value %}value="{{ form.quantity.value }}"{% endif %}>
-                        {% for error in form.quantity.errors %}
-                            <span class="help-block">{{ error|escape }}</span>
-                        {% endfor %}
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="id_tax_notes" class="col-sm-2 control-label">{{ form.tax_notes.label }}</label>
-
-                    <div class="col-sm-8">
-                    <textarea class="form-control" cols="40" id="id_tax_notes" name="tax_notes"
-                              rows="5">{% if form.tax_notes.value %}{{ form.tax_notes.value }}{% endif %}</textarea>
-                        {% for error in form.tax_notes.errors %}
+                    <input type="date" class="form-control" id="id_date" name="date"
+                               {% if form.date.value %}value="{{ form.date.value }}"{% endif %}>
+                    <p id="dateHelpBlock" class="form-text text-muted">{{ form.date.help_text }}</p>
+                        {% for error in form.date.errors %}
                             <span class="help-block">{{ error|escape }}</span>
                         {% endfor %}
                     </div>
@@ -86,9 +48,38 @@
                         <button type="submit" class="btn btn-primary">Create</button>
                     </div>
                 </div>
+                <table>
+                    {{ invoice_items.management_form }}
+
+                    {% for form in invoice_items.forms %}
+                        {% if forloop.first %}
+                            <thead>
+                            <tr>
+                                {% for field in form.visible_fields %}
+                                    <th>{{ field.label|capfirst }}</th>
+                                {% endfor %}
+                            </tr>
+                            </thead>
+                        {% endif %}
+                        <tr class="{% cycle row1,row2 %} formset_row">
+                            {% for field in form.visible_fields %}
+                                <td>
+                                    {# Include the hidden fields in the form #}
+                                    {% if forloop.first %}
+                                        {% for hidden in form.hidden_fields %}
+                                            {{ hidden }}
+                                        {% endfor %}
+                                    {% endif %}
+                                    {{ field.errors.as_ul }}
+                                    {{ field }}
+                                </td>
+                            {% endfor %}
+                        </tr>
+                    {% endfor %}
+                </table>
             </form>
         </div>
     </div>
-    <a href="{% url 'inventories:item_list' %}">Cancel</a>
+    <a href="{% url 'invoices:invoice_list' %}">Cancel</a>
 
 {% endblock %}
