implement add invoice page

--- a/invoice_books/templates/invoice/invoice_detail.html
+++ b/invoice_books/templates/invoice/invoice_detail.html
@@ -55,18 +55,22 @@
                     </tr>
                     <tr>
                         <th>Item</th>
+                        <th>Quantity</th>
                         <th>Amount</th>
                         <th>Discount</th>
                         <th>Tax</th>
+                        <th>Total Amount Per Unit</th>
                         <th>Total Amount</th>
                     </tr>
                     {% for item in invoice.items.all %}
                         <tr>
                             <td>{{ item.item.name }}</td>
+                            <td>{{ item.quantity }}</td>
                             <td>{{ item.amount }}</td>
                             <td>{{ item.discount }}</td>
                             <td>{{ item.tax }}</td>
                             <td>{{ item.total_amount }}</td>
+                            <td>{{ item.total_amount_all_units }}</td>
                             <td></td>
                         </tr>
                     {% endfor %}
