--- a/invoice_books/templates/invoice/invoice_create.html
+++ b/invoice_books/templates/invoice/invoice_create.html
@@ -12,16 +12,16 @@
         <div class="panel-heading">
             Create Invoice
         </div>
-        <div class="panel-footer">
-            <div class="form_errors">
-                <ul class="list-group">
-                    {% for error in form.non_field_errors %}
-                        <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <form class="form-horizontal" method="post">
-                {% csrf_token %}
+        <form class="form-horizontal" method="post">
+            {% csrf_token %}
+            <div class="panel-footer">
+                <div class="form_errors">
+                    <ul class="list-group">
+                        {% for error in form.non_field_errors %}
+                            <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                        {% endfor %}
+                    </ul>
+                </div>
                 <div class="form-group">
                     <label for="id_customer" class="col-sm-2 control-label">{{ form.customer.label }}</label>
 
@@ -49,78 +49,83 @@
                         {% endfor %}
                     </div>
                 </div>
-            </form>
-        </div>
-        <div class="panel-body">
-            <div class="item_forms_div">
-                <div id="js_empty_sub_form" class="js_sub_form form-horizontal" style="display: none;">
-                    <div class="form_errors">
-                        <ul class="list-group">
-                            {% for error in invoice_items_formset.empty_form.non_field_errors %}
-                                <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                    <div class="form-group">
-                        <label for="{{ invoice_items_formset.empty_form.item.auto_id }}"
-                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.item.label }}</label>
-
-                        <div class="col-sm-8">
-                            <select class="form-control js_item_select" id="{{ invoice_items_formset.empty_form.item.auto_id }}"
-                                    name="{{ invoice_items_formset.empty_form.item.html_name }}">
-                                {% for val, text in invoice_items_formset.empty_form.fields.item.choices %}
-                                    <option value="{{ val }}"{% if invoice_items_formset.empty_form.item.value|add:"0" == val|add:"0" %}
-                                            selected{% endif %}>{{ text }}</option>
-                                {% endfor %}
-                            </select>
-                            {% for error in invoice_items_formset.empty_form.item.errors %}
-                                <span class="help-block">{{ error|escape }}</span>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="{{ invoice_items_formset.empty_form.auto_id }}"
-                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.quantity.label }}</label>
-
-                        <div class="col-sm-8">
-                            <input type="number" class="form-control" min="1"
-                                   id="{{ invoice_items_formset.empty_form.quantity.auto_id }}"
-                                   name="{{ invoice_items_formset.empty_form.quantity.html_name }}"
-                                   value="{{ invoice_items_formset.empty_form.quantity.value }}">
-                            {% for error in invoice_items_formset.empty_form.quantity.errors %}
-                                <span class="help-block">{{ error|escape }}</span>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="{{ invoice_items_formset.empty_form.auto_id }}"
-                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.discount.label }}</label>
-
-                        <div class="col-sm-8">
-                            <input type="number" step="0.1" class="form-control" min="1"
-                                   id="{{ invoice_items_formset.empty_form.discount.auto_id }}"
-                                   name="{{ invoice_items_formset.empty_form.discount.html_name }}"
-                                   value="{{ invoice_items_formset.empty_form.discount.value }}">
-                            {% for error in invoice_items_formset.empty_form.discount.errors %}
-                                <span class="help-block">{{ error|escape }}</span>
-                            {% endfor %}
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
-                               class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.DELETE.label }}</label>
-
-                        <div class="col-sm-8">
-                            <input type="checkbox" id="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
-                                   name="{{ invoice_items_formset.empty_form.DELETE.html_name }}"
-                                   {% if invoice_items_formset.empty_form.DELETE.value %}checked{% endif %}>
-                        </div>
-                    </div>
-                    <hr>
+            </div>
+            <div class="panel-body">
+                <div class="form_errors">
+                    <ul class="list-group">
+                        {% for error in invoice_items_formset.non_form_errors %}
+                            <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                        {% endfor %}
+                    </ul>
                 </div>
-                <form id="js_issue_form" class="form-horizontal" method="post">
-                    {% csrf_token %}
-                    {{ form.management_form }}
+                <div class="item_forms_div">
+                    <div id="js_empty_sub_form" class="js_sub_form form-horizontal" style="display: none;">
+                        <div class="form_errors">
+                            <ul class="list-group">
+                                {% for error in invoice_items_formset.empty_form.non_field_errors %}
+                                    <li class="list-group-item"><strong>{{ error|escape }}</strong></li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ invoice_items_formset.empty_form.item.auto_id }}"
+                                   class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.item.label }}</label>
+
+                            <div class="col-sm-8">
+                                <select class="form-control js_item_select" id="{{ invoice_items_formset.empty_form.item.auto_id }}"
+                                        name="{{ invoice_items_formset.empty_form.item.html_name }}">
+                                    {% for val, text in invoice_items_formset.empty_form.fields.item.choices %}
+                                        <option value="{{ val }}"{% if invoice_items_formset.empty_form.item.value|add:"0" == val|add:"0" %}
+                                                selected{% endif %}>{{ text }}</option>
+                                    {% endfor %}
+                                </select>
+                                {% for error in invoice_items_formset.empty_form.item.errors %}
+                                    <span class="help-block">{{ error|escape }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ invoice_items_formset.empty_form.auto_id }}"
+                                   class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.quantity.label }}</label>
+
+                            <div class="col-sm-8">
+                                <input type="number" class="form-control" min="1"
+                                       id="{{ invoice_items_formset.empty_form.quantity.auto_id }}"
+                                       name="{{ invoice_items_formset.empty_form.quantity.html_name }}"
+                                       value="{{ invoice_items_formset.empty_form.quantity.value }}">
+                                {% for error in invoice_items_formset.empty_form.quantity.errors %}
+                                    <span class="help-block">{{ error|escape }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ invoice_items_formset.empty_form.auto_id }}"
+                                   class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.discount.label }}</label>
+
+                            <div class="col-sm-8">
+                                <input type="number" step="0.1" class="form-control" min="0"
+                                       id="{{ invoice_items_formset.empty_form.discount.auto_id }}"
+                                       name="{{ invoice_items_formset.empty_form.discount.html_name }}"
+                                       value="{{ invoice_items_formset.empty_form.discount.value }}">
+                                {% for error in invoice_items_formset.empty_form.discount.errors %}
+                                    <span class="help-block">{{ error|escape }}</span>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
+                                   class="col-sm-2 control-label">{{ invoice_items_formset.empty_form.DELETE.label }}</label>
+
+                            <div class="col-sm-8">
+                                <input type="checkbox" id="{{ invoice_items_formset.empty_form.DELETE.auto_id }}"
+                                       name="{{ invoice_items_formset.empty_form.DELETE.html_name }}"
+                                       {% if invoice_items_formset.empty_form.DELETE.value %}checked{% endif %}>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    {{ invoice_items_formset.management_form }}
                     <div id="js_sub_forms_table">
                         {% for f in invoice_items_formset %}
                             <div id="js_{{ forloop.counter0 }}_sub_form" class="js_sub_form">
@@ -166,7 +171,7 @@
                                            class="col-sm-2 control-label">{{ f.discount.label }}</label>
 
                                     <div class="col-sm-8">
-                                        <input type="number" step="0.01" class="form-control" min="1" id="{{ f.discount.auto_id }}"
+                                        <input type="number" step="0.01" class="form-control" min="0" id="{{ f.discount.auto_id }}"
                                                name="{{ f.discount.html_name }}"
                                                value="{{ f.discount.value }}">
                                         {% for error in f.discount.errors %}
@@ -188,17 +193,17 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <div class="clearfix">
-                        <div class="issue_form_actions">
-                            <input type="button" id="js_add_item" class="btn btn-default" value="Add More Items">
-                        </div>
-                        <div class="issue_form_submit">
-                            <input type="submit" id="js_issue_item" class="btn btn-success" value="Bill Above Items"/>
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
-        </div>
+            <div class="clearfix">
+                <div class="issue_form_actions">
+                    <input type="button" id="js_add_item" class="btn btn-default" value="Add More Items">
+                </div>
+                <div class="issue_form_submit">
+                    <input type="submit" id="js_issue_item" class="btn btn-success" value="Bill Above Items"/>
+                </div>
+            </div>
+        </form>
     </div>
     <a href="{% url 'invoices:invoice_list' %}">Cancel</a>
 
