implement two buttons for invoice creation, style submit buttons better

--- a/invoice_books/assets/css/styles.css
+++ b/invoice_books/assets/css/styles.css
@@ -152,3 +152,11 @@ body .modal-admin {
 .non-empty {
     min-height: 15px;
 }
+
+.issue_form_actions {
+    float: left;
+}
+
+.issue_formset_submit {
+    float: right;
+}
