--- a/invoice_books/templates/invoice/invoice_create.html
+++ b/invoice_books/templates/invoice/invoice_create.html
@@ -195,12 +195,16 @@
                     </div>
                 </div>
             </div>
-            <div class="clearfix">
-                <div class="issue_form_actions">
-                    <input type="button" id="js_add_item" class="btn btn-default" value="Add More Items">
-                </div>
-                <div class="issue_form_submit">
-                    <input type="submit" id="js_issue_item" class="btn btn-success" value="Bill Above Items"/>
+            <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                    <div class="clearfix">
+                        <div class="col-sm-8 issue_form_actions">
+                            <input type="button" id="js_add_item" class="btn btn-default" value="Add More Items">
+                        </div>
+                        <div class="issue_form_submit">
+                            <input type="submit" id="js_issue_item" class="btn btn-success" value="Bill Above Items"/>
+                        </div>
+                    </div>
                 </div>
             </div>
         </form>
