--- a/invoice_books/templates/project/dashboard.html
+++ b/invoice_books/templates/project/dashboard.html
@@ -16,8 +16,22 @@
     <li>
         <a href={% url 'taxes:tax_list' %}>Taxes</a>
     </li>
+{#    <li class="dropdown">#}
+{#        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"#}
+{#           aria-expanded="false">+ New Invoice<span#}
+{#                class="caret"></span></a>#}
+{##}
+{#        <ul class="dropdown-menu">#}
+{#            <li><a href="{% url "customers:customer_create" %}">Existing Customer</a></li>#}
+{#            <li class="active"><a href="{% url "customers:customer_create" %}">New Customer</a></li>#}
+{#        </ul>#}
+{#    </li>#}
+
     <li>
-        <a href={% url 'customers:customer_create' %}><span class="btn btn-success navbar-btn navbar_short_btn">+ New Invoice</span></a>
+        <a href={% url 'invoices:invoice_create' %}><span class="btn btn-success navbar-btn navbar_short_btn">+ New Invoice (Existing customer)</span></a>
+    </li>
+    <li>
+        <a href={% url 'customers:customer_create' %}><span class="btn btn-success navbar-btn navbar_short_btn">+ New Invoice (New customer)</span></a>
     </li>
 </ul>
 {% endblock %}
